--- a/frontend/admin/admindashboard.html
+++ b/frontend/admin/admindashboard.html
@@ -7,14 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../style/style.css" rel="stylesheet">
     <style>
+        .navbar-custom {
+            background: #23272b;
+        }
+        .admin-badge {
+            font-weight: bold;
+            background: orange;
+            color: #23272b;
+            border-radius: 6px;
+            padding: 2px 12px;
+            margin-left: 10px;
+            letter-spacing: 1px;
+        }
         .dashboard-card {
             background: #343a40;
             border-radius: 12px;
             padding: 2rem 1rem 1rem 1rem;
             margin: 1rem 0;
+            color: #fff;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
         .dashboard-card img {
-            width: 180px;
+            width: 120px;
             display: block;
             margin: 0 auto 1rem auto;
         }
@@ -28,47 +42,22 @@
     </style>
 </head>
 <body class="bg-dark text-light">
-    <!-- Navbar Hamburger -->
-    <nav class="navbar navbar-dark bg-dark fixed-top shadow">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-                aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="../admin/admindashboard.html">Dashboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="../user/memberlist.html">Member List</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="#">Book List</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="#" id="logoutBtn">Logout</a>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-custom shadow-sm">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center">
+                <span class="fs-5 fw-bold text-light">Admin Panel</span>
+                <span class="admin-badge ms-2">ADMIN</span>
             </div>
+            <button class="btn btn-danger" id="logoutBtn">Logout</button>
         </div>
     </nav>
-    <br><br><br>
     <!-- End Navbar -->
 
     <div class="container dashboard-header text-center">
         <h2 class="fw-bold">home page</h2>
         <p class="fs-5 mb-2">Welcome back, <span class="fw-bold">admin</span></p>
         <button class="btn btn-warning me-2">Request (0)</button>
-        <button class="btn btn-danger" id="logoutBtn2">Log Out</button>
     </div>
 
     <div class="container">
